fix the team text not centered properly

--- a/sites/all/themes/KBHNS/sass/_views.scss
+++ b/sites/all/themes/KBHNS/sass/_views.scss
@@ -940,7 +940,6 @@
 		a + div
 		{
 			padding-top: 0px;
-			padding-right: 15px;
 		}
 
 		.field-content > a 
